--- a/iFlipout/iFlipout/res/layout/home_view.xml
+++ b/iFlipout/iFlipout/res/layout/home_view.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="fill_parent">
 	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="fill_parent" android:orientation="vertical">
+		android:layout_height="fill_parent" android:orientation="vertical"
+		android:background="@drawable/bk_gnd">
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
 			android:text="My Channels" android:paddingTop="20dip"
