--- a/iFlipout/iFlipout/res/values/colors.xml
+++ b/iFlipout/iFlipout/res/values/colors.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-  <color name="default_bg_color">#3B312D</color>
-  <color name="default_text_color">#000000</color>
-  <color name="black">#000000</color>
-  <color name="title_background">#3BB9FF</color>
-  <color name="title_text">#ffffffff</color>
-  <color name="title_text_alt">#ff000000</color>
-  <color name="foreground1">#ff355689</color>
-  <color name="foreground2">#ff7081a3</color>
-  <color name="background1">#ffffffff</color>
-  <color name="background2">#ffd5ddeb</color>
-  <color name="background3">#ffe3e8f1</color>
-  <color name="title_separator">#FFFFFF</color>
-
-  <color name="session_foreground_past">#ff999999</color>
-
-  <color name="pinned_header_background">#ff202020</color>
+	<color name="default_bg_color">#3B312D</color>
+	<color name="default_text_color">#000000</color>
+	<color name="black">#000000</color>
+	<color name="title_background">#3BB9FF</color>
+	<color name="title_text">#ffffffff</color>
+	<color name="title_text_alt">#ff000000</color>
+	<color name="foreground1">#ff355689</color>
+	<color name="foreground2">#ff7081a3</color>
+	<color name="background1">#ffffffff</color>
+	<color name="background2">#ffd5ddeb</color>
+	<color name="background3">#ffe3e8f1</color>
+	<color name="title_separator">#FFFFFF</color>
+	<color name="session_foreground_past">#ff999999</color>
+	<color name="pinned_header_background">#ff202020</color>
+	<color name="menu_buttons">#293a47</color>
 </resources>
 
