--- a/iFlipout/Veritra/res/layout/mychannelview.xml
+++ b/iFlipout/Veritra/res/layout/mychannelview.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/base_layout" android:layout_width="fill_parent"
-	android:layout_height="fill_parent" android:orientation="vertical"
-	android:background="@drawable/bk_gnd">
+	android:id="@+id/base_layout" android:layout_height="fill_parent"
+	android:orientation="vertical" android:background="@drawable/bk_gnd"
+	android:layout_width="match_parent">
 	<include layout="@layout/colorstrip" />
 	<LinearLayout android:layout_width="fill_parent"
 		android:layout_height="60dip" android:orientation="horizontal"
@@ -13,27 +13,29 @@
 			android:layout_height="5dip" android:text="World of info @ a flip way" />
 	</LinearLayout>
 	<LinearLayout android:layout_width="fill_parent"
-		android:layout_height="60dip" android:orientation="vertical"
-		android:background="@drawable/bk_gnd">
-		<ImageView android:src="@drawable/wsj" android:id="@+id/wsj_image_view"
-			android:layout_width="50px" android:layout_height="50px" />
+		android:layout_height="160dip" android:orientation="vertical">
 		<TextView android:id="@+id/explore" android:layout_width="wrap_content"
 			android:textSize="15sp" android:layout_marginTop="5dip"
-			android:textStyle="normal" android:text="WSJ" android:textColor="@color/default_text_color"
-			android:layout_height="fill_parent" />
-		<LinearLayout android:layout_width="fill_parent"
-			android:layout_height="60dip" android:orientation="horizontal">
-			<Button android:id="@+id/news" android:text="News"
-				android:layout_width="wrap_content" android:layout_height="55dip" android:drawableTop="@drawable/newsfeed"
-				android:textSize="8sp" android:textStyle="bold" />
-			<Button android:id="@+id/faceBook" android:text="Face Book"
-					android:layout_width="wrap_content" android:layout_height="55dip" android:drawableTop="@drawable/facebook"
-				android:textSize="8sp" android:textStyle="bold" />
-			<Button android:id="@+id/youtube" android:text="You tube"
-				android:textSize="8sp" android:textStyle="bold" 	
-				android:layout_width="wrap_content" android:layout_height="55dip"
-				android:drawableTop="@drawable/youtube1" />
-			<ImageView style="@style/TitleBarSeparator" />
-		</LinearLayout>
+			android:textStyle="normal" android:text="My Channels"
+			android:textColor="@color/default_text_color" android:layout_height="wrap_content" />
+		<ImageView android:src="@drawable/wsj" android:id="@+id/wsj_image_view"
+			android:layout_width="50px" android:layout_height="50px" />
+	</LinearLayout>
+	<TextView android:layout_width="wrap_content"
+		android:textSize="15sp" android:layout_marginTop="5dip"
+		android:textStyle="normal" android:text="My Apps" android:textColor="@color/default_text_color"
+		android:layout_height="wrap_content" />
+
+	<LinearLayout android:layout_width="fill_parent"
+		android:layout_height="60dip" android:orientation="horizontal">
+		<Button android:id="@+id/news" android:text="News"
+			style="@style/TitleBarAction" android:drawableTop="@drawable/newsfeed"
+			android:textSize="8sp" android:textStyle="bold" />
+		<Button android:id="@+id/faceBook" android:text="Face Book"
+			style="@style/TitleBarAction" android:drawableTop="@drawable/facebook"
+			android:textSize="8sp" android:textStyle="bold" />
+		<Button android:id="@+id/youtube" android:text="You tube"
+			android:textSize="8sp" android:textStyle="bold" style="@style/TitleBarAction"
+			android:drawableTop="@drawable/youtube1" />
 	</LinearLayout>
 </LinearLayout>
